--- a/src/app/gifs/pages/dashboard-page/dashboard-page.html
+++ b/src/app/gifs/pages/dashboard-page/dashboard-page.html
@@ -1,10 +1,10 @@
-<div class="bg-slate-100 overflow-y-scroll w-screen h-screen antialiased text-slate-300 selection:bg-blue-600 selection:text-white">
-    <div class="flex flex-col relative w-screen">
+<div class="bg-slate-100 overflow-y-scrollh-screen antialiased text-slate-300 selection:bg-blue-600 selection:text-white">
+    <div class="flex flex-col relative">
       <!-- Gifs side-menu -->
       <gift-side-menu />
 
 
-      <div class="ml-64 px-4 flex flex-col flex-1 w-full h-full text-slate-800">
+      <div class="ml-64 p-4 flex flex-col flex-1 h-full text-slate-800">
         <router-outlet />
       </div>
 
