Implementación de los gif (Llamada HTTP to giphy Api, creación y modificación de archivos)

--- a/src/app/gifs/components/gif-list/gif-list-item/gif-list-item.html
+++ b/src/app/gifs/components/gif-list/gif-list-item/gif-list-item.html
@@ -1,4 +1,4 @@
-<img class="h-auto max-w-full rounded-lg" [src]="imageUrl()" [alt]="imageAlt()">
+<img class="h-full max-w-full rounded-lg object-cover" [src]="gifUrl()" [alt]="gifAlt()">
 
 
 
