--- a/src/app/gifs/components/gif-list/gif-list.html
+++ b/src/app/gifs/components/gif-list/gif-list.html
@@ -1,6 +1,6 @@
 <div class="grid grid-col-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
-  @for(images of gifs();track images.url){
-    <gif-list-item [imageUrl]="images.url" [imageAlt]="images.alt"/>
+  @for(gifs of gifs();track gifs){
+    <gif-list-item [gifUrl]="gifs.url" [gifAlt]="gifs.title"/>
   }
 </div>
 
