Historiales de busqueda implementados

--- a/src/app/gifs/pages/search-page/search-page.html
+++ b/src/app/gifs/pages/search-page/search-page.html
@@ -11,5 +11,5 @@
 </section>
 
 <section class="pt-4">
-  <gif-list [gifs]="gifsService.trendingGifs()"/>
+  <gif-list [gifs]="gifs()"/>
 </section>
